--- a/index/More.html
+++ b/index/More.html
@@ -24,7 +24,7 @@
 			</form>
 			
 			<div class="d-flex gap-2 align-items-center">
-				<button id="more-s" class="btn btn-info dropdown-toggle shadow" type="button">•••</button>
+				<button id="more-s" class="btn btn-info dropdown-toggle shadow" type="button">Baidu</button>
 				<button id="more-c" class="btn btn-info shadow oh" type="button">清空</button>
 				<div id="more-mm" class="d-none d-flex gap-2">
 					<button class="btn btn-info shadow oh" onclick="window.location.href = 'MM-secure.html'" type="button">M-M</button>
@@ -37,15 +37,15 @@
 	<div class="content-wrapper">
 		<div class="container-fluid mt-3 px-4">
 			<div id="more-b" class="more-grid d-none mb-4">
-				<div class="more-card"><a href="http://192.168.1.1" rel="nofollow" target="_blank" class="nav-ban-item"><img class="nav-ban-icon" src="../img/luyou.png" loading="lazy"><h6 class="nav-ban-text">1.</h6></a></div>
-				<div class="more-card"><a href="http://192.168.2.1" rel="nofollow" target="_blank" class="nav-ban-item"><img class="nav-ban-icon" src="../img/luyou.png" loading="lazy"><h6 class="nav-ban-text">2.</h6></a></div>
-				<div class="more-card"><a href="http://192.168.1.1" rel="nofollow" target="_blank" class="nav-ban-item"><img class="nav-ban-icon" src="../img/luyou.png" loading="lazy"><h6 class="nav-ban-text">192168.</h6></a></div>
-				<div class="more-card"><a href="https://www.baidu.com" rel="nofollow" target="_blank" class="nav-ban-item"><img class="nav-ban-icon" src="https://api.iowen.cn/favicon/www.baidu.com.png" loading="lazy"><h6 class="nav-ban-text">Baidu</h6></a></div>
-				<div class="more-card"><a href="https://www.bing.com" rel="nofollow" target="_blank" class="nav-ban-item"><img class="nav-ban-icon" src="https://api.iowen.cn/favicon/www.bing.com.png" loading="lazy"><h6 class="nav-ban-text">Bing</h6></a></div>
-				<div class="more-card"><a href="https://www.google.com" rel="nofollow" target="_blank" class="nav-ban-item"><img class="nav-ban-icon" src="https://api.iowen.cn/favicon/www.google.com.png" loading="lazy"><h6 class="nav-ban-text">Google.hk</h6></a></div>
-				<div class="more-card"><a href="https://www.yandex.com" rel="nofollow" target="_blank" class="nav-ban-item"><img class="nav-ban-icon" src="https://api.iowen.cn/favicon/www.Yandex.com.png" loading="lazy"><h6 class="nav-ban-text">Yandex</h6></a></div>
-				<div class="more-card"><a href="https://www.bilibili.com" rel="nofollow" target="_blank" class="nav-ban-item"><img class="nav-ban-icon" src="https://api.iowen.cn/favicon/www.bilibili.com.png" loading="lazy"><h6 class="nav-ban-text">BiliBili</h6></a></div>
-				<div class="more-card"><a href="https://www.kuaidi100.com" rel="nofollow" target="_blank" class="nav-ban-item"><img class="nav-ban-icon" src="https://api.iowen.cn/favicon/www.kuaidi100.com.png" loading="lazy"><h6 class="nav-ban-text">快递100</h6></a></div>
+				<div class="more-card"><a href="javascript:a(0)" class="nav-ban-item"><img class="nav-ban-icon" src="../img/luyou.png" loading="lazy"><h6 class="nav-ban-text">1.</h6></a></div>
+				<div class="more-card"><a href="javascript:a(1)" class="nav-ban-item"><img class="nav-ban-icon" src="../img/luyou.png" loading="lazy"><h6 class="nav-ban-text">2.</h6></a></div>
+				<div class="more-card"><a href="javascript:a(2)" class="nav-ban-item"><img class="nav-ban-icon" src="../img/luyou.png" loading="lazy"><h6 class="nav-ban-text">192168.</h6></a></div>
+				<div class="more-card"><a href="javascript:a(3)" class="nav-ban-item"><img class="nav-ban-icon" src="https://api.iowen.cn/favicon/www.baidu.com.png" loading="lazy"><h6 class="nav-ban-text">Baidu</h6></a></div>
+				<div class="more-card"><a href="javascript:a(4)" class="nav-ban-item"><img class="nav-ban-icon" src="https://api.iowen.cn/favicon/www.bing.com.png" loading="lazy"><h6 class="nav-ban-text">Bing</h6></a></div>
+				<div class="more-card"><a href="javascript:a(5)" class="nav-ban-item"><img class="nav-ban-icon" src="https://api.iowen.cn/favicon/www.google.com.png" loading="lazy"><h6 class="nav-ban-text">Google.hk</h6></a></div>
+				<div class="more-card"><a href="javascript:a(6)" class="nav-ban-item"><img class="nav-ban-icon" src="https://api.iowen.cn/favicon/www.Yandex.com.png" loading="lazy"><h6 class="nav-ban-text">Yandex</h6></a></div>
+				<div class="more-card"><a href="javascript:a(7)" class="nav-ban-item"><img class="nav-ban-icon" src="https://api.iowen.cn/favicon/www.bilibili.com.png" loading="lazy"><h6 class="nav-ban-text">BiliBili</h6></a></div>
+				<div class="more-card"><a href="javascript:a(8)" class="nav-ban-item"><img class="nav-ban-icon" src="https://api.iowen.cn/favicon/www.kuaidi100.com.png" loading="lazy"><h6 class="nav-ban-text">快递100</h6></a></div>
 			</div>
 			
 			<div id="nav-content-container"></div>
