--- a/index/manager/nav-manager.html
+++ b/index/manager/nav-manager.html
@@ -65,11 +65,11 @@
         <div class="bg-light rounded p-3 mb-4">
             <h5 class="mb-3">选择要管理的页面:</h5>
             <div class="d-flex flex-wrap gap-2">
-                <button class="btn btn-outline-primary fs-085r active page-btn" data-page="index">主页 (index.html)</button>
-                <button class="btn btn-outline-primary fs-085r page-btn" data-page="more">更多页面 (More.html)</button>
-                <button class="btn btn-outline-primary fs-085r page-btn" data-page="dd">DD页面 (DD.html)</button>
-                <button class="btn btn-outline-primary fs-085r page-btn" data-page="download">下载页面 (Download.html)</button>
-                <button class="btn btn-outline-primary fs-085r page-btn" data-page="develop">开发页面 (Develop.html)</button>
+                <button type="button" class="btn btn-outline-primary fs-085r active page-btn" data-page="index">主页 (index.html)</button>
+                <button type="button" class="btn btn-outline-primary fs-085r page-btn" data-page="more">更多页面 (More.html)</button>
+                <button type="button" class="btn btn-outline-primary fs-085r page-btn" data-page="dd">DD页面 (DD.html)</button>
+                <button type="button" class="btn btn-outline-primary fs-085r page-btn" data-page="download">下载页面 (Download.html)</button>
+                <button type="button" class="btn btn-outline-primary fs-085r page-btn" data-page="develop">开发页面 (Develop.html)</button>
             </div>
         </div>
         
