--- a/index/MM-secure.html
+++ b/index/MM-secure.html
@@ -488,18 +488,37 @@
 			// 隐藏密码输入区域，显示内容区域
 			passwordSection.classList.add('d-none');
 			contentSection.classList.remove('d-none');
+			
+			// 允许页面滚动
+			document.body.classList.remove('overflow-y-hidden');
+			document.body.style.overflowY = 'auto';
 
 			// 解析JSON并显示
 			try {
 				const data = JSON.parse(content);
 				let html = '';
+				
+				// 设置容器为Grid布局
+				mmContent.className = 'row g-3';
 
 				data.forEach(entry => {
 					html += `
-						<div class="mm-entry">
-							<div class="mm-entry-platform">${entry.platform}</div>
-							<div class="mm-entry-account">账号: ${entry.accountType}</div>
-							<div class="mm-entry-password">密码模式: ${entry.passwordPattern || '无'}</div>
+						<div class="col-12 col-md-6 col-lg-4">
+							<div class="card h-100 shadow-sm border-0 bg-white">
+								<div class="card-body">
+									<h5 class="card-title text-primary border-bottom pb-2 mb-3">
+										<i class="fas fa-globe me-2"></i>${entry.platform}
+									</h5>
+									<p class="card-text mb-2">
+										<i class="fas fa-user me-2 text-secondary"></i>
+										<strong>账号:</strong> ${entry.accountType}
+									</p>
+									<p class="card-text">
+										<i class="fas fa-key me-2 text-secondary"></i>
+										<strong>模式:</strong> <span class="badge bg-info text-dark">${entry.passwordPattern || '无'}</span>
+									</p>
+								</div>
+							</div>
 						</div>
 					`;
 				});
@@ -507,7 +526,7 @@
 				mmContent.innerHTML = html;
 			} catch (error) {
 				console.error('解析JSON失败:', error);
-				mmContent.innerHTML = '<div class="alert alert-danger">解析数据失败</div>';
+				mmContent.innerHTML = '<div class="alert alert-danger w-100">解析数据失败</div>';
 			}
 		}
 
