--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<script src="performance-config.js" defer></script>
 </head>
 
-<body class="main-content">
+<body class="main-content overflow-y-hidden">
 	<div class="content-wrapper d-flex flex-column mx-auto">
 		<div class="d-flex flex-column justify-content-end" style="height: 57vh;">
 			<div class="mx-auto shadow mt-3 rounded-3"><img id="indexing" width="250" src="img/login.png" class="p-1">
@@ -24,8 +24,8 @@
 				<script src="js/components/search-component.js"></script>
 			</div>
 		</div>
-		<div class="d-flex flex-column" style="flex: 1;">
-			<nav class="p-2 mx-auto mt-10 pt-5">
+		<div class="d-flex flex-column justify-content-center pb-5" style="flex: 1;">
+			<nav class="p-2 mx-auto">
 				<div class="nav nav-tabs shadow rounded-2 justify-content-center" id="nav-tabs-container">
 					<!-- More链接将由JavaScript动态添加 -->
 				</div>
